<resources>
    <string name="app_name" translatable="false">Mistery Match</string>
    <string name="google_maps_key" translatable="false">AIzaSyCxMT5CJO0PA1KN3BDrXycvIarYXaHAUUI</string>
    <string name="facebook_app_id" translatable="false">1164044920441298</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1164044920441298</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="gems">Gems</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_an_account">Don\'t Have an Account?</string>
    <string name="card">Card</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="invalid_name">First name is mandatory</string>
    <string name="invalid_last_name">Last name is mandatory</string>
    <string name="invalid_email">Email is mandatory</string>
    <string name="invalid_password">Password is mandatory</string>
    <string name="invalid_mobile">Mobile Number is mandatory</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="back">Back</string>
    <string name="age">Age</string>
    <string name="about">About</string>
    <string name="lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</string>
    <string name="bio_video">Bio Video</string>
    <string name="interests">Interests</string>
    <string name="write_a_description">Write a Description</string>
    <string name="gender">Gender</string>
    <string name="dob">Dob</string>
    <string name="select_dob">dd/mm/yyyy</string>
    <string name="current_work">Current Work</string>
    <string name="creative_associate">Creative Associate</string>
    <string name="control_your_profile">Control Your Profile</string>
    <string name="save">Save</string>
    <string name="choose_your_interests">Choose Your Interests</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="likes">Likes</string>
    <string name="invite">Invite</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="skip">Skip</string>
    <string name="walk_1">Like The Profile</string>
    <string name="walk_1_description">First like the profile with a swipe</string>
    <string name="walk_2">Match Up</string>
    <string name="walk_2_description">Get the right match</string>
    <string name="walk_3">Chat</string>
    <string name="walk_3_description">Chat with the liked profile after getting matched.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email_to_recover_password">Enter Email to Recover Password</string>
    <string name="next">Next</string>
    <string name="create_new_password">Create New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="premium">Premium</string>
    <string name="country_name">Country Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="dont_show_my_age">Don\'t Show My Age</string>
    <string name="make_my_distance_invisible">Make My Distance Invisible</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="you_have_not_picked_image">You haven\'t picked Image</string>
    <string name="success">Success</string>
    <string name="enable">ENABLE</string>
    <string name="please_grant_permissions_to_upload">Please Grant Permissions to upload Profile</string>
    <string name="no_notifications_found">No Notifications Found</string>
    <string name="no_likes_found">No Likes Found</string>
    <string name="no_cards_found">No Cards Found</string>
    <string name="no_chats_found">No Chats Found</string>
    <string name="who_likes_me">Who Likes Me</string>
    <string name="invite_friends">Invite</string>
    <string name="upload_bio_video">Upload Bio Video</string>
    <string name="view_profile">View Profile</string>
    <string name="username">Username</string>
    <string name="new_matches">New Matches</string>
    <string name="messages">Messages</string>
    <string name="app_settings">App Settings</string>
    <string name="discovery_settings">Discovery Settings</string>
    <string name="location">Location</string>
    <string name="my_current_location">My Current Location</string>
    <string name="search_distance">Search Distance</string>
    <string name="age_range">Age Range</string>
    <string name="show_me">Show Me</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="dnd">DND</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="general">General</string>
    <string name="unlock_our_most_exclusive_features">Unlock our most exclusive features</string>
    <string name="super_like">Superlike</string>
    <string name="you_superliked">You superliked %s</string>
    <string name="send_a_message">Send a Message</string>
    <string name="video_call">Video Call</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="invite_headline">Invite friends</string>
    <string name="invite_monetize">You each will get $51 when your friends installs the application</string>
    <string name="invite_url_headline">Your Datesause sharing URL</string>
    <string name="invite_hint_copy">copy and paste the below link into emails, chats and browsers</string>
    <string name="invite_link_copy">COPY</string>
    <string name="invite_token">Invite Friends</string>
    <string name="registered_successfully">Successfully Registered</string>
    <string name="tot_bal">Total Balance</string>
    <string name="share_money">Share Money</string>
    <string name="add_money">Add Money</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_all_history">All</string>
    <string name="wallet_paid_history">Paid</string>
    <string name="wallet_received_history">Received</string>
    <string name="wallet_added_history">Added</string>
    <string name="us">\u0024</string>
    <string name="Rs">\u20B9</string>
    <string name="select_member">Select Member</string>
    <string name="add_money_text">Add Money</string>
    <string name="add_card">Add Card</string>
    <string name="add_card_details">Add Card Details</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="cards">Cards</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="select_card">Select Card</string>
    <string name="send_money">Send Money</string>
    <string name="send_amount_to">Send Amount to %s</string>
    <string name="or">------ or ------</string>
    <string name="added_to_wallet">Added to Wallet</string>
    <string name="it_is_a_match">It\'s a Match</string>
    <string name="you_and_liked_each_other">You and %s liked each other</string>
    <string name="cash_sent">Cash Sent</string>
    <string name="cash_received">Cash Received</string>
    <string name="paid_for_subscription">Paid for Subscription</string>
    <string name="from_">From: %s</string>
    <string name="to_">To: %s</string>
    <string name="write_a_message">Write a message…</string>
    <string name="uploading">Uploading…</string>
    <string name="_liked_your_profile">%s liked your profile.</string>
    <string name="_disliked_your_profile">%s disliked your profile.</string>
    <string name="_added_you_as_friend">%s added you as friend.</string>
    <string name="_superliked_your_profile">%s superliked your profile.</string>
    <string name="_recommended_your_profile">%s recommended your profile.</string>
    <string name="_sent_the_amount_to_your_wallet">%s sent the amount to your wallet.</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="choose_your_plan">Choose Your Plan</string>
    <string name="get_pro">Get Pro</string>
    <string name="app_version">App Version %d</string>
    <string name="card_deleted_successfully">Card Deleted Successfully</string>
    <string name="report">Report</string>
    <string name="inappropriate_messages">Inappropriate Messages</string>
    <string name="inappropriate_photos">Inappropriate Photos</string>
    <string name="bad_offline_behaviour">Bad Offline Behaviour</string>
    <string name="feel_like_spam">Feel like spam</string>
    <string name="report_this_user">Report this user</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_is_sent_by_sms_to">Verification Code Sent to </string>
    <string name="did_not_receive_code">Didnt receive code ?</string>
    <string name="confirm_code">Conifrm code</string>
    <string name="select_language">Select Language</string>
    <string name="logout_confirmation">Are you sure want to logout</string>
    <string name="uploaded_image">Uploaded image</string>
    <string name="uploaded_video">Uploaded video</string>
    <string name="delete_confirm">Are you sure want to Delete Account</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="invite_code">Invite code</string>
    <string name="invite_description">Accept my invite for the %s %s and My Invite code is %s</string>
    <string name="_km">%d km</string>
    <string name="no_matches_found">No one around you</string>
    <string name="user_name_already_been_taken">This username already been taken</string>
    <string name="please_wait">Please wait</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="otp_sent_to_your_">OTP sent to your %s</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="your_rate_is">Your %s rate is %s</string>
    <string name="thank_you_for_getting">Thank you for getting</string>
    <string name="features">Features</string>
    <string name="your_premium_package_will_be_ended_by">Your Premium Package will be ended by</string>
    <string name="pro">pro</string>
    <string name="bio_video_uploaded">Bio video uploaded</string>
    <string name="referral_code">Referral code</string>
    <string name="insufficient_wallet_balance">Insufficient wallet balance</string>
    <string name="linkedin">LinkedIn</string>
    <string name="loading">Loading</string>
    <string name="mistery_match">Mistery Match</string>
    <string name="ringing">Ringing&#8230;</string>
    <string name="end_call">End Call</string>
    <string name="like_the_person">Do you like the person whom you had video call chat?</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
</resources>