<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".fragment.MatchingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/mistery_match"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pl_pulse"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/ringing"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <pl.bclogic.pulsator4droid.library.PulsatorLayout
        android:id="@+id/pl_pulse"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        app:pulse_color="@color/colorPrimaryDark"
        app:pulse_count="3"
        app:pulse_duration="5000"
        app:pulse_interpolator="Linear"
        app:pulse_repeat="0"
        app:pulse_startFromScratch="true" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:contentDescription="@null"
        android:src="@drawable/ic_call" />

    <TextView
        android:id="@+id/tv_end_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_btn"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/end_call"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />
</RelativeLayout>