<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/invites_logo"
                    android:layout_width="@dimen/dp180"
                    android:layout_height="@dimen/dp180"
                    android:padding="8dp"
                    android:src="@drawable/invite_icon" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/invites_headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp8"
                    android:gravity="center_horizontal"
                    android:text="@string/invite_headline"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/invite_monetize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingEnd="@dimen/dp60"
                    android:paddingStart="@dimen/dp60"
                    android:text="@string/invite_monetize"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp8"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/invite_code"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/invite_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:textSize="22sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/done_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/invite_token"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>


</LinearLayout>