<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.misterymatch.app.activity.OtpActivity"
    >


    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:fontFamily="@font/opensans_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/verification_code"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/verification_code_is_sent_by_sms_to"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/email"
                android:fontFamily="@font/opensans_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/dp8"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />


            <com.misterymatch.app.widgets.Pinview
                android:id="@+id/pv_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cursorVisible="false"
                app:forceKeyboard="true"
                app:inputType="number"
                app:password="true"
                app:pinHeight="40dp"
                app:pinLength="6"
                app:pinWidth="40dp"
                app:splitWidth="@dimen/dp10" />


            <TextView
                android:id="@+id/did_not_receive_code"
                android:fontFamily="@font/opensans_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:gravity="center"
                android:text="@string/did_not_receive_code"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/confirm_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/confirm_code"
            android:textAllCaps="false"
            android:textColor="#FFF" />

    </RelativeLayout>

</LinearLayout>