<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:padding="20dp"
    tools:context=".FragmentSheet.LikeDislikeFragment">

    <TextView
        android:id="@+id/tv_like_person"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/like_the_person"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dislike"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_btn"
        android:backgroundTint="@color/colorPink"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/dislike"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_like_person" />

    <TextView
        android:id="@+id/tv_like"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_btn"
        android:backgroundTint="@color/colorGreen"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/like"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_dislike"
        app:layout_constraintTop_toBottomOf="@id/tv_like_person" />
</android.support.constraint.ConstraintLayout>