<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@drawable/background"
    app:layout_scrollFlags="enterAlways"
    app:popupTheme="@style/AppTheme.PopupOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/profile"
            android:focusable="true"
            android:src="@drawable/user"
            app:civ_border_color="#FFF"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/pacifico_regular"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:layout_weight="2"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/chat"
            android:focusable="true"
            android:padding="@dimen/dp2"
            android:src="@drawable/ic_chat" />
    </LinearLayout>

</android.support.v7.widget.Toolbar>