<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.misterymatch.app.activity.WalkthroughActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/sign_layout"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal"
            android:padding="8dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/opensans_bold"
        android:padding="16dp"
        android:text="@string/skip"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />


    <LinearLayout
        android:id="@+id/sign_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_btn"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_btn"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</RelativeLayout>
