<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b3000000">

    <ImageView
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status"
            android:fontFamily="@font/pacifico_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/super_like"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
             />


        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/you_superliked"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar1"
                android:layout_width="126dp"
                android:layout_height="126dp"
                android:src="@drawable/user"
                app:civ_border_color="@android:color/transparent"
                app:civ_border_width="8dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar2"
                android:layout_width="126dp"
                android:layout_height="126dp"
                android:layout_marginStart="86dp"
                android:src="@drawable/user"
                app:civ_border_color="#b3000000"
                app:civ_border_width="8dp" />


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:weightSum="2">

        <Button
            android:id="@+id/bio_video"
            android:fontFamily="@font/opensans_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:maxLines="1"
            android:padding="16dp"
            android:enabled="false"
            android:alpha="0.5"
            android:text="@string/video_call"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
             />

        <Button
            android:id="@+id/send_a_message"
            android:fontFamily="@font/opensans_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:maxLines="1"
            android:padding="16dp"
            android:text="@string/send_a_message"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
             />

    </LinearLayout>

</RelativeLayout>